--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,8 @@ jobs:
         # 运行脚本
       - name: 'Working'
         env:	#添加环境变量
-          id: ${{ secrets.ID }}
-          passw: ${{ secrets.PASSW }}
+          ID: ${{ secrets.ID }}
+          PASSW: ${{ secrets.PASSW }}
         run: |
           sudo cp -p ./chrome/chromedriver /usr/bin/
           chmod -R 777 /usr/bin/chromedriver
